--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,20 @@
     <artifactId>belgorodGraph</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+<!--
+    <dependency>
+        <groupId>org.xwiki.contrib</groupId>
+        <artifactId>mxgraph</artifactId>
+        <version>3.7.2</version>
+    </dependency>
+-->
+<!--
     <dependencies>
         <dependency>
-            <groupId>mxgraph</groupId>
-            <artifactId>mxgraph</artifactId>
-            <version>5.5.1</version>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${3.7.2}</version>
         </dependency>
     </dependencies>
-
-
+-->
 </project>
