--- a/pom.xml
+++ b/pom.xml
@@ -24,4 +24,11 @@
         </dependency>
     </dependencies>
 -->
+
+    <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+        </resource>
+    </resources>
+
 </project>
