--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <resources>
         <resource>
-            <directory>src/main/java/resources</directory>
+            <directory>src/main/resources</directory>
         </resource>
     </resources>
 
